--- a/nextflow.config
+++ b/nextflow.config
@@ -13,9 +13,11 @@ params.reads = "${params.sequence_dir}/*_R{1,2}*.fastq.gz"
 // Conda Params
 params.conda_dir = "${params.run_dir}/envs"
 params.scanpy_env = "${params.conda_dir}/scanpy.yaml"
+conda.enabled = true
 
 // Kallisto Parameters
 params.index_dir = "${params.run_dir}/data/index"
 params.kallisto_index = "${params.index_dir}/transcriptome.idx"
 params.t2g = "${params.index_dir}/t2g.txt"
 params.pipseq_tech = "0,0,28:0,28,40:1,0,0"
+
