--- a/envs/scanpy.yaml
+++ b/envs/scanpy.yaml
@@ -29,8 +29,10 @@ dependencies:
       - cycler==0.11.0
       - fonttools==4.40.0
       - h5py==3.9.0
+      - igraph==0.10.4
       - joblib==1.2.0
       - kiwisolver==1.4.4
+      - leidenalg==0.9.1
       - llvmlite==0.40.1rc1
       - matplotlib==3.7.1
       - natsort==8.4.0
@@ -53,6 +55,7 @@ dependencies:
       - six==1.16.0
       - statsmodels==0.14.0
       - stdlib-list==0.8.0
+      - texttable==1.6.7
       - threadpoolctl==3.1.0
       - tqdm==4.65.0
       - tzdata==2023.3
