included a merging section, a simple preprocessing section, and an initial pca, neighbors and umap calculation

--- a/nextflow.config
+++ b/nextflow.config
@@ -20,3 +20,7 @@ params.index_dir = "${params.run_dir}/data/index"
 params.kallisto_index = "${params.index_dir}/transcriptome.idx"
 params.t2g = "${params.index_dir}/t2g.txt"
 params.pipseq_tech = "0,0,28:0,28,40:1,0,0"
+
+// Single-Cell Parameters
+params.cell_umi_threshold = 1
+params.gene_cell_threshold = 1
